--- a/leanpkg.toml
+++ b/leanpkg.toml
@@ -6,4 +6,4 @@ path = "src"
 
 [dependencies]
 mathlib = {git = "https://github.com/leanprover-community/mathlib", rev = "9adf9bb6f4723596fbd869004bb481915534eaa2"}
-lean-gptf = {git = "https://github.com/jesse-michael-han/lean-gptf", rev = "3e20785d65604744e9e2dc9d710a695a7355fd2c"}
+lean-gptf = {git = "https://github.com/jesse-michael-han/lean-gptf", rev = "master"}
