--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,9 +88,6 @@ jobs:
           find src/ -name "*.olean" -o -name ".noisy_files" | tar cJf "$archive_name" -T -
           azcopy copy "$archive_name" "${{ secrets.AZURE_SAS_TOKEN }}" --block-size-mb 99 --overwrite false
 
-      - name: test thm95 is sorry free
-        run: python scripts/ensure_thm95_sorry_free.py
-
       - name: setup precompiled zip file
         if: always() && steps.build.outputs.started == 'true'
         id: setup_precompiled
@@ -141,3 +138,33 @@ jobs:
         run: |
           ./scripts/mk_all.sh
           lean --run scripts/lint_lean_liquid.lean
+
+  test:
+    name: Test Theorem 9.5 is sorry-free
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: retrieve build
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ needs.build.outputs.artifact_name }}
+
+      - name: untar build
+        run: tar -xf workspace.tar
+
+      - name: install elan
+        run: |
+          set -o pipefail
+          curl https://raw.githubusercontent.com/Kha/elan/master/elan-init.sh -sSf | sh -s -- --default-toolchain none -y
+          ~/.elan/bin/lean --version
+          echo "$HOME/.elan/bin" >> $GITHUB_PATH
+
+      - name: install Python
+        if: ${{ ! 0 }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+
+      - name: test thm95 is sorry free
+        run: python scripts/ensure_thm95_sorry_free.py
