--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,10 @@ name: continuous integration (new)
 
 jobs:
 
-  # When you push to a branch other than master, we cancel previous runs of jobs in this file on
-  # that branch.
+  # When you push to a branch, we cancel previous runs of jobs in this file on that branch.
   cancel:
     name: 'Cancel previous runs on branch'
-    if: github.ref != 'refs/heads/master'
+    # if: github.ref != 'refs/heads/master'
     runs-on: ubuntu-latest
     # timeout-minutes: 3
     steps:
