rename old CI to avoid confusion

--- a/.github/workflows/lean_build.yml
+++ b/.github/workflows/lean_build.yml
@@ -1,4 +1,4 @@
-name: continuous integration
+name: continuous integration (old)
 
 on:
   push:
@@ -13,10 +13,3 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
-
-    - name: update branch
-      if: github.ref == 'refs/heads/master'
-      uses: leanprover-contrib/update-versions-action@master
-
-    - name: build project
-      uses: leanprover-contrib/lean-build-action@master
