--- a/.github/workflows/nolints.yml
+++ b/.github/workflows/nolints.yml
@@ -1,6 +1,7 @@
 name: update nolints
 
 on:
+  workflow_dispatch: ~
   schedule:
     - cron: "0 0 * * *"
 
@@ -14,8 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: leanprover-community/mathlib
           fetch-depth: ${{ env.GIT_HISTORY_DEPTH }}
+          # We need to use a personal access token here. See the comment in upgrade_lean.yml.
+          token: ${{ secrets.PA_TOKEN }}
 
       - name: install elan
         run: |
@@ -30,35 +32,38 @@ jobs:
         with:
           python-version: 3.8
 
+      - name: install mathlibtools
+        run: python -m pip install --upgrade pip mathlibtools
+
+      - name: leanpkg configure
+        run: leanpkg configure
+
+      - name: get mathlib cache
+        run: leanproject get-mathlib-cache || true
+
       - name: try to find olean cache
+        continue-on-error: true
         run: ./scripts/fetch_olean_cache.sh
 
       - name: leanpkg build
         id: build
         run: |
           leanpkg configure
-          lean --json -T100000 --make src | python scripts/detect_errors.py
+          lean --json --make src | python scripts/detect_errors.py
 
       - name: lint
         run: |
           ./scripts/mk_all.sh
-          lean --run scripts/lint_mathlib.lean
+          lean --run ./scripts/lint_lean_liquid.lean
           mv nolints.txt scripts/nolints.txt
-          ./scripts/update-style-exceptions.sh
+          # ./scripts/update-style-exceptions.sh
           git diff
 
-      - name: configure git setup
+      - name: configure git user
         run: |
-          git remote add origin-bot "https://leanprover-community-bot:${{ secrets.LCB_TOKEN }}@github.com/leanprover-community/mathlib.git"
           git config user.email "leanprover.community@gmail.com"
           git config user.name "leanprover-community-bot"
-
-          # By default, github actions overrides the credentials used to access any
-          # github url so that it uses the github-actions[bot] user.  We want to access
-          # github using a different username.
-          git config --unset http.https://github.com/.extraheader
+          git config pull.rebase true
 
       - name: update nolints.txt
         run: ./scripts/update_nolints.sh
-        env:
-          DEPLOY_GITHUB_TOKEN: ${{ secrets.LCB_TOKEN }}
