--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,7 +123,8 @@ jobs:
           echo "$HOME/.elan/bin" >> $GITHUB_PATH
 
       - name: lint
-        continue-on-error: true
+        # Uncomment the following line to make the build succeed even if there are linting errors
+        # continue-on-error: true
         run: |
           ./scripts/mk_all.sh
           lean --run scripts/lint_lean_liquid.lean
