--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,7 +127,7 @@ jobs:
         # continue-on-error: true
         run: |
           ./scripts/mk_all.sh
-          lean --run scripts/lint_lean_liquid.lean
+          lean --run scripts/lint_project.lean
 
   test:
     name: Test Theorem 9.5 is sorry-free
