--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,4 +5,4 @@ vscode:
     - jroesch.lean
 
 tasks:
-  - command: . /home/gitpod/.profile && leanproject get-mathlib-cache
+  - command: . /home/gitpod/.profile && scripts/get-cache.sh
