--- a/leanpkg.toml
+++ b/leanpkg.toml
@@ -7,3 +7,4 @@ path = "src"
 [dependencies]
 mathlib = {git = "https://github.com/leanprover-community/mathlib", rev = "6d3e93626dc338de8d107e2a45106460036c1efd"}
 lean-gptf = {git = "https://github.com/jesse-michael-han/lean-gptf", rev = "3e20785d65604744e9e2dc9d710a695a7355fd2c"}
+lean-generalisation = {path = "../lean-generalisation/"}
