--- a/.github/workflows/nolints.yml
+++ b/.github/workflows/nolints.yml
@@ -55,6 +55,10 @@ jobs:
         run: |
           ./scripts/mk_all.sh
           lean --run ./scripts/lint_project.lean || true
+          if [[ ! -e nolints.txt ]]; then
+            echo "Error during linting - could not generate nolints.txt"
+            exit 1
+          fi
           mv nolints.txt scripts/nolints.txt
           # ./scripts/update-style-exceptions.sh
           git diff
