proved aux_summable_iff_on_nat

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
   "search.usePCRE2": true,
-  "workbench.startupEditor": "none"
+  "workbench.startupEditor": "none",
+  "editor.hover.delay": 2000
 }
