--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,8 +80,18 @@ jobs:
         run: |
           set -o pipefail
           echo "::set-output name=started::true"
+          # We record hashes of the oleans for debugging purposes.
+          find src -name "*.olean" -exec md5sum {} \; | awk '{print $2,$1}' | sort > olean_hashes_at_start.txt
+          echo "Starting build at $(date + '%T')"
           lean --json --make src | python scripts/detect_errors.py
-          lean --json --make src | python scripts/detect_errors.py
+          result_run1=$?
+          echo "Run 1 complete at $(date +'%T'); return value $result_run1"
+          find src -name "*.olean" -exec md5sum {} \; | awk '{print $2,$1}' | sort > olean_hashes_after_run_1.txt
+          lean --json --make src | python scripts/detect_errors.py || echo "run 2 failed"
+          result_run2=$?
+          echo "Run 2 complete at $(date +'%T'); return value $result_run2"
+          find src -name "*.olean" -exec md5sum {} \; | awk '{print $2,$1}' | sort > olean_hashes_after_run_2.txt
+          exit $result_run2
 
       - name: push release to azure
         if: always() && (github.repository == 'leanprover-community/lean-liquid' || github.repository == 'bentoner/lean-liquid') && steps.build.outputs.started == 'true' && github.ref == 'refs/heads/master'
