disable set-swap-space?

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,10 +39,10 @@ jobs:
     outputs:
       artifact_name: ${{ steps.setup_precompiled.outputs.artifact_name }}
     steps:
-      - name: bump swap space
-        uses: pierotofy/set-swap-space@master
-        with:
-          swap-size-gb: 14
+      # - name: bump swap space
+      #   uses: pierotofy/set-swap-space@master
+      #   with:
+      #     swap-size-gb: 14
 
       - uses: actions/checkout@v2
         with:
